--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "karting-faq-bot",
+  "name": "chatbot-backend",
   "version": "1.0.0",
-  "description": "Backend for KartingCentral AI Chatbot using FAQs",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "openai": "^4.30.1"
     "express": "^4.18.2",
     "openai": "^4.26.0"
   }
